# git-chess

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  board.fen  board.html  pyproject.toml  requirements.txt
.github/workflows/: ai-opponent.yml  deploy-pages.yml  git-chess-ci.yml
git_chess/: __init__.py  ai.py  cli.py  engine.py  pgn.py  utils.py  visualization.py
hooks/: README.md  commit-msg  post-commit  prepare-commit-msg
tests/: test_ai.py  test_engine.py  test_full_game.py  test_pgn.py  test_visualization.py
